<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ch.epfl.sweng.project.UnfilledTasksActivity"
    android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ActionBar"
            android:minHeight="?attr/actionBarSize"
            android:id="@+id/unfilled_tasks_toolbar" />

        <FrameLayout
        android:id="@+id/unfilled_tasks_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7.19">

        </FrameLayout>

</LinearLayout>